
             • extent examples by for test data set by Berger & Huntley
               (1989).

         • ‘plot_Historgram()’

             • The forwarded argument ‘breaks’ was not treated
               correctly (#54); fixed.

         • ‘plot_RLum()’

             • The function now supports plotting even of highly nested
               lists of `RLum-objects`.

         • ‘read_BIN2R()’

             • The function unexpectetly dropped are warning for an
               unused connection; fixed,

             • if a file link was provided and the argument ‘pattern’
               was set and error was shown; fixed.

         • ‘read_Daybreak2R()’

             • The functions did not work anymore on ASCII files;
               fixed!

         • ‘read_XSYG2R()’

             • Argument ‘verbose’ added for more consistency with other
               functions,

             • the functions now supports the import form files via the
               internet,

             • minor modifications to support minimal examples without
               'recordType',

             • give the XSYG-file import a 50% performance boost,

             • set option `XML_PARSE_HUGE` to allow parsing of larger
               nodes within the XSYG-file.

         • ‘read_SPE2R()’

             • Add support for internet connections.

         • ‘write_R2BIN()’

             • The BIN-file export to version 04 failed in very rare
               cases for ‘NA’ values in the byte position ‘SEQUENCE’;
               fixed,

             • the compatibility mode was extended to limit the maxium
               number of points for one curve to 9,999 (if the option
               is chosen). This gives more compatibility with older
               versions of the Analyst.

  Internals:

         • Start supporting RStudio add-ins for more advanced users.

         • Add fitting test data set by Berger & Huntley (1989) as
           external data.
