@@ -103,6 +103,14 @@
     }
   }
 
+  \item \code{plot_RLum.Analysis()}{
+        \itemize{
+         \item The option `col` was not working as expected if `black` was provided; fixed.
+
+    }
+  }
+
+
 
   \item \code{read_BIN2R()}{
         \itemize{
