@@ -89,6 +89,11 @@ Changes in version 0.8.0 ( ,2017):
              • The function now supports plotting even of highly nested
                lists of `RLum-objects`.
 
+         • ‘plot_RLum.Analysis()’
+
+             • The option `col` was not working as expected if `black`
+               was provided; fixed.
+
          • ‘read_BIN2R()’
 
              • The function unexpectetly dropped are warning for an
